# GTMind

./: .env.example  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
sample_outputs.json/: ai_in_biotechnology.json  ai_in_healthcare.json  ai_in_retail.json
src/gtmind/: __init__.py  persistence.py
src/gtmind/api/: cli.py  run.py
src/gtmind/core/: aggregate.py  extract.py  models.py  parse.py  prompts.py  search.py  settings.py
src/gtmind/ui/: app.py
tests/api/: test_run.py
tests/core/: test_aggregate.py  test_extract.py  test_models.py  test_parse.py  test_persistence.py  test_search.py  test_settings.py
tests/integration/: test_pipeline.py
