[tool.poetry]
name = "gtmind"
version = "0.1.0"
description = "Autonomous research agent backend"
authors = ["Amrit Kochar <amritkochar.007@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gtmind", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.28.1,<0.29.0"
trafilatura = ">=2.0.0,<3.0.0"
openai = ">=1.78.0,<2.0.0"
pydantic-settings = "^2.9.1"
tenacity = "^9.1.2"
rapidfuzz = "^3.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = {extras = ["toml"], version = "^7.8.0"}
respx = ">=0.21,<1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests"]


[tool.pytest.ini_options]
pythonpath = ["src"]
